Fix bad size on mobile screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -62,7 +62,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     color: var(--text);
     background-color: var(--background);
     font-family: system-ui, sans-serif;
